# dink

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Doxyfile.in  LICENSE  README.md
src/: CMakeLists.txt
src/dink/: CMakeLists.txt  README.md  arg.hpp  arg_test.cpp  arg_unit_test.cpp  arity.hpp  arity_test.cpp  bind.hpp  bind_test.cpp  binding.hpp  binding_dsl.hpp  binding_dsl_test.cpp  binding_test.cpp  binding_transform.hpp  binding_transform_test.cpp  bindings.hpp  bindings_test.cpp  bindings_unit_test.cpp  cache.hpp  cache_adapter.hpp  cache_adapter_test.cpp  cache_line_size.hpp  cache_line_size_unit_test.cpp  cache_test.cpp  cache_traits.hpp  cache_traits_test.cpp  caching_policy.hpp  caching_policy_test.cpp  canonical.hpp  canonical_test.cpp  canonical_type.hpp  canonical_type_test.cpp  composer.hpp  composer_unit_test.cpp  config.hpp  config.template.hpp  config_test.cpp  container.hpp  container_integration_test.cpp  container_test.cpp  (+91 more)
src/dink/cache/: hash_table.hpp  hash_table_test.cpp  type_indexed.hpp  type_indexed_test.cpp
src/dink/config/: binding.hpp  flatten.hpp  flatten_unit_test.cpp
src/dink/integration_test/: CMakeLists.txt  composition.cpp  hierarchy.cpp  integration_test.cpp  integration_test.hpp  multiple_containers.cpp  promotion.cpp  scopes.cpp
src/dink/memory/: append_only_heap_allocator.hpp  append_only_heap_allocator_unit_test.cpp  arena_allocator.hpp  arena_allocator_unit_test.cpp  array_allocator.hpp  heap_allocator.hpp  heap_page_buffer_source.hpp  heap_page_buffer_source_unit_test.cpp  owned_buffer.hpp  page.hpp  page_allocator.hpp  page_allocator_unit_test.cpp  page_buffer_source.hpp  page_factory.hpp  page_factory_unit_test.cpp  page_size.hpp  page_unit_test.cpp  paged_allocator.hpp  paged_arena.hpp  paged_arena_allocator.hpp  paged_arena_allocator_unit_test.cpp  paged_arena_unit_test.cpp  paged_sub_allocator.hpp  paged_sub_allocator_unit_test.cpp  type_erased_storage_unit_test.cpp
src/dink/scope/config/: binding.hpp  binding_unit_test.cpp
src/dink/scope/config/detail/: tuple.hpp  tuple_unit_test.cpp
src/v0.0.1/dink/: CMakeLists.txt  README.md  arg.hpp  arg_unit_test.cpp  bindings_unit_test.cpp  composer_unit_test.cpp  config.template.hpp  dink_integration_test.cpp  dink_unit_test.cpp  dispatcher.hpp  dispatcher_unit_test.cpp  factory.hpp  has_static_construct_method.hpp  poc.cpp  resolver_unit_test.cpp  scope_unit_test.cpp  strong_type.hpp  type_map.hpp
src/v0.0.1/dink/config/: binding_unit_test.cpp
src/v0.0.1/dink/memory/: append_only_heap_allocator.hpp  append_only_heap_allocator_unit_test.cpp  page.hpp  page_factory.hpp  page_factory_unit_test.cpp  page_size.hpp  page_size_unit_test.cpp  paged_allocator_unit_test.cpp  type_erased_storage.hpp
src/v0.1.0/: CMakeLists.txt
src/v0.1.0/dink/: CMakeLists.txt  arg.hpp  arg_test.cpp  dink.hpp  lifetime.hpp  lifetime_registry.hpp  lifetime_registry_test.cpp
src/v0.1.0/dink/object_repository/: intrusive_list.hpp  intrusive_list_test.cpp  poc.cpp
src/v0.1.0/dink/object_repository/memory/: alignment.hpp  alignment_test.cpp  allocation_list.hpp  allocation_list_test.cpp  allocator.hpp  cast_allocation.hpp  cast_allocation_test.cpp  construct_in_allocation.hpp  construct_in_allocation_test.cpp  deleters.hpp  deleters_test.cpp  heap_allocator.hpp  os_page_size_provider.hpp  os_page_size_provider_test.cpp  page.hpp  page_size.hpp  page_test.cpp  paged_allocator.hpp  paged_allocator_test.cpp  pending_allocation.dox  poc.cpp  scoped_allocator.hpp
src/v0.1.0/dink/object_repository/memory/allocators/: allocators.hpp  heap.hpp  heap_allocator_test.cpp  heap_test.cpp  page.hpp  page_test.cpp  paged.hpp  paged_allocator.hpp  paged_allocator_test.cpp  paged_test.cpp  reservation.dox  scoped.hpp  scoped_allocator.hpp  scoped_allocator_test.cpp  scoped_test.cpp  thresholding.hpp  thresholding_test.cpp
